# nar-runtime

./: README.md  build.sh  go.mod  go.sum
lib/: nar-package.h  nar.h  native.go
native/package-template/: _package.c  _package.h  hello.c
package-native/: nar.h  narc.c  narc.h
package-native/package-template/: CMakeLists.txt  hello.c  native.c  native.h
runtime/: arena.go  bridge.c  bridge.go  envDebug.go  envRelease.go  id.go  native.c  native.go  object.go  object_new.go  object_to.go  runtime.go
